--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base ./",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "react-router-dom": "^6.17.0",
     "arweave": "^1.15.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
